Fix Navbar Visibility

--- a/src/app/components/cbutton/cbutton.component.scss
+++ b/src/app/components/cbutton/cbutton.component.scss
@@ -21,6 +21,6 @@
     z-index: 1;
   }
   .diagonal-swipe:hover:after {
-    border-width: 350px 350px 0 0;
+    border-width: 450px 450px 0 0;
     z-index: -1;
   }
